components/home/leaderboard.module.scss
@import "/styles/base";

.leaderboard {
  margin: 50px;
  font-family: $primary-font;

  h2 {
    color: $primary-color;
    font-size: 36px;
    font-weight: 700;
    text-transform: uppercase;
    margin-bottom: 40px;
  }

  .leaderboardTabsContainer {

    .tabs {
      border-bottom: 1px solid $light-gray;
      padding-bottom: 10px;

      span {
        margin: 8px;
        font-size: 16px;
        border-bottom: 1px solid $light-gray;
        padding-bottom: 10px;
        color: $light-gray;
        cursor: pointer;
        transition: $transition;
      }

      span:hover, span.active {
        border-bottom: 1px solid $primary-color;
        color: white;
        font-weight: 700;
        transition: $transition;
      }
    }

    .tabsContent {
      margin: 20px 0;
    }
  }

  .viewMoreLink {
    text-align: right;
  }
}

@media screen and (max-width: 1280px) {
  .leaderboard {
    margin: 20px;
  }
}

@media screen and (max-width: 768px) {
  .leaderboard {
    margin: 20px;

    h2 {
      margin-bottom: 20px;
      font-size: 25px;
    }
  }
}

